--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 .App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
@@ -35,4 +39,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.containerComponent {
+  width: 400px;
+  height: 400px;
+  border: solid;
+  border-width: 1px;
+  margin-top: 200px;
 }
